<resources>
    <string name="app_name">Nong Beer</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="or">or</string>
    <string name="Amount">Amount</string>
    <string name="cart_is_empty">Cart is empty.</string>
    <string name="add_to_order">Add to order</string>
    <string name="order_beer">Order</string>
    <string name="total">Total</string>
    <string name="zero_baht">0฿</string>
    <string name="baht">฿</string>
    <string name="confirm_order">Confirm order</string>
    <string name="your_order_history_is_empty">Your order history is empty.</string>
    <string name="close">Close</string>
    <string name="order_history_detail">Order history detail</string>
    <string name="success_order">We will deliver the beer to you as soon as possible.</string>
    <string name="try_again">Try again</string>
    <string name="added">Added</string>
    <string name="at"> at </string>
    <string name="bottles_of_beer"> bottles of beer</string>
    <string name="beer">Beer</string>
    <string name="history">History</string>
</resources>
