<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="th.co.thekhaeng.nextzy.fighting.nongbeer.ui.orderdetail.OrderDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/BeerToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/toolbar_back"
                android:layout_width="@dimen/default_icon_size_extra_large"
                android:layout_height="@dimen/default_icon_size_extra_large"
                android:clickable="true"
                android:padding="12dp"
                android:src="@drawable/ic_back_selector"/>

            <TextView
                android:id="@+id/toolbar_tv_title"
                style="@style/BeerTextView.Black.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_history_detail"
                android:textStyle="bold"/>


        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/elevation_card"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding_margin_large">

        <TextView
            android:id="@+id/tv_date"
            style="@style/BeerTextView.Black.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="20/03/2017 at 12:23"/>

        <TextView
            android:id="@+id/tv_total_price"
            style="@style/BeerTextView.Red.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero_baht"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_order"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="@dimen/elevation_sliding"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding_margin_large">

        <Button
            android:id="@+id/btn_close"
            style="@style/BeerButton.Active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close"/>
    </LinearLayout>

</LinearLayout>
